# robot_arm_moveit

./: .gitignore  .gitmodules  .xdp_rwm_moveit.workspace.U2GKM2  Readme.md  requirement.txt
.qtc_clangd/: compile_commands.json
src/: README.md  start_program.sh
src/realsense-ros/realsense2_camera/: CMakeLists.txt
src/rm_robot/arm_controller_code/: CMakeLists.txt  package.xml
src/rm_robot/rm_65_arm_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
src/rm_robot/rm_msgs/: CMakeLists.txt
src/robot_control/: README.md
src/robot_control/myomega/: AI_MCTS_Net.py  Board.py  MonteCarloTreeSearch.py  Network.py  Player.py  PolicyValueNet_from_junxiaosong.py  omega.py  test.py
src/robot_control/rm65_grasping/: CMakeLists.txt  package.xml
src/robot_control/robot_camera_control/: CMakeLists.txt  package.xml
src/robot_control/robot_moveit_control/: CMakeLists.txt  package.xml
src/robot_control/robot_msgs/: CMakeLists.txt  package.xml
src/robot_control/robtot_camera_control/: CMakeLists.txt  package.xml
src/robot_control/utils/: base_detect.py  cloudpoint_topic.py  config.yaml  preprocess.py  (+5 more)
src/robot_control/vgn/: package.xml
src/robot_control/vgn/assets/models/: vgn_conv_100.pt
src/robot_control/vgn/launch/: grasp.launch  grasp.yaml
src/robot_control/vgn/nodes/: grasp_server.py
src/robot_control/vgn/scripts/: 1.py  panda_grasp.py
src/robot_control/vgn/src/robot_helpers/ros/: tf.py
src/robot_control/vgn/src/vgn/: envs.py  perception.py  simulation.py
src/rokae_robot/: CMakeLists.txt  package.xml
src/yd_msgs/: CMakeLists.txt
(+181 files in other folders)
